--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,14 @@ body {
     grid-template: 1fr 5fr / min(15%, 300px) 2fr 1fr;
     font-family: var(--main-font);
     margin: 0;
-    height: 100vh;
+    
 }
 
 header {
     grid-column: 2 / 4;
     grid-row: 1 / 2;
-    padding: 20px;
+    padding: 20px 20px 0 20px;
+    box-shadow: 0 5px 15px #D3D3D3;
 }
 
 .header-top {
@@ -35,12 +36,93 @@ header {
     grid-template-columns: 2fr 1fr;
 }
 
+.avatar-nav-group {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 5px;
+}
+
+.avatar-nav-group > p {
+    margin: 0;
+}
+
+.icon img {
+    width: 30px;
+    border-radius: 50%;
+}
+
+.icon img:hover{
+    box-shadow: 0 0 5px #D3D3D3;
+    cursor: pointer;
+}
+
+.alert-icon img {
+    width: 20px;
+    padding: 0 10px;
+}
+
+.alert-icon img:hover {
+    cursor: pointer;
+    filter: invert(87%) sepia(13%) saturate(7490%) hue-rotate(329deg) brightness(105%) contrast(88%);
+}
+
 .avatar-info-group {
     font-weight: var(--font-weight-light);
+    display: grid;
+    grid-template-rows: minmax(20px, 30px) minmax(40px, 70px) ;
+}
+
+.avatar-info-group > p {
+    margin: 0;
 }
 
 .avatar {
     font-weight: var(--font-weight-extrabold);
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.main-avatar img {
+    width: 60px;
+    border-radius: 50%;
+}
+
+.main-avatar img:hover {
+    box-shadow: 0 0 10px #D3D3D3;
+    cursor: pointer;
+}
+
+.search-group {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.search-icon img {
+    width: 15px;
+    padding: 0 10px;
+}
+
+.search-icon img:hover {
+    cursor: pointer;
+    filter: invert(87%) sepia(13%) saturate(7490%) hue-rotate(329deg) brightness(105%) contrast(88%);
+}
+
+input[type="search"] {
+    width: clamp(400px, 40%, 80%);
+    padding: 5px 10px;
+}
+
+input[type="search"]:focus {
+    border: solid var(--color-blue);
+    border-width: 0 1px;
+}
+
+.button-group {
+    justify-self: flex-end;
+    align-self: center;
 }
 
 button {
@@ -59,18 +141,13 @@ button:hover {
     cursor: pointer;
 }
 
-input[type="search"]
-{
-    width: clamp(200px, 40%, 500px);
-}
-
 nav {
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     display: grid;
     align-items: space-between;
     background-color: var(--color-darkblue);
-    color: rgb(196, 196, 196);
+    color: #CCCCCC;
 }
 
 ul {
@@ -97,14 +174,25 @@ ul > li:hover {
     align-self: flex-end;
 }
 
+.list-icon img {
+    width: 15px;
+    padding: 0 10px;
+}
+
+
 main {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     display: grid;
-    grid-template-rows: repeat(auto-fit, 1fr);
+    grid-template-rows: minmax(20px, 50px) repeat(auto-fit, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 15px;
     padding: 20px;
+}
+
+main > h3 {
+    grid-column: 1 / 3;
+    margin: 0;
 }
 
 main div {
@@ -112,7 +200,33 @@ main div {
     border-radius: 5px;
 }
 
+main div:hover {
+    box-shadow: 0 0 10px var(--color-blue);
+    cursor: pointer;
+}
+
+.main-content-container {
+    padding: 20px;
+    font-size: 1.5rem;
+}
+
 aside {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
+}
+
+.aside-content-container {
+    border: 2px solid #dfe0eb;
+    border-radius: 5px;
+    margin: 20px;
+    padding: 10px;
+}
+
+hr {
+    background-color: none;
+    border: 1px solid var(--color-yellow);
+}
+
+.aside-content-container > p {
+    padding: 10px;
 }
